--- a/pcaptools/README
+++ b/pcaptools/README
@@ -1,10 +1,14 @@
 This directory contains supplemental tools for working with pcap files produced
-by gr-bluetooth.  (Actually gr-bluetooth doesn't produce such files by itself
-at this time, but you can produce them with tcpdump listening on a tun
-interface that is written to by btrx -w).
+by libbtbb.  (Actually libbtbb doesn't produce such files by itself at this
+time, but you can produce them with the Ubertooth tools.
 
-These tools are not automatically installed as part of the gr-bluetooth
+These tools are not automatically installed as part of the libbtbb
 installation but can be used right out of this directory or manually installed.
+
+pcapdump: a Python module for pcap
+
+Pcapdump us used by btaptap to read and write pcap files.  It should work with
+python 2.4 and above (python 3 support requires using the 2to3 tool).
 
 
 btaptap: a Bluetooth keyboard sniffer
