--- a/wireshark/plugins/btbb/README
+++ b/wireshark/plugins/btbb/README
@@ -3,7 +3,17 @@ BTBB Wireshark plugin
 This is the Bluetooth baseband plugin for Wireshark, it also includes an LMP
 level dissector.
 
-To build the plugin, use the following commands:
+To build this on Debian/Ubuntu/BackTrack linux distributions:
+  sudo apt-get install wireshark-dev wireshark
+  cd libbtbb/wireshark/plugins/btbb/
+  cmake .
+  make
+  make install
+
+This will install to the .wireshark/ in your home directory.  To override this
+set the DESTDIR environment variable when running cmake.
+
+To build the plugin as part of wireshark, use the following commands:
   tar xf wireshark-1.8.2.tar.bz2
   cp -R libbtbb/wireshark/plugins/btbb wireshark-1.8.2/plugins/
   patch -p0 < wireshark-1.8.2/plugins/btbb/wireshark-1.8-btbb.patch
