--- a/changelog
+++ b/changelog
@@ -1,3 +1,8 @@
+libbtbb (2018-12-R1) unstable; urgency=low
+  * No changes, just keeping version parity with Ubertooth 2018-12-R1
+
+ -- Mike Ryan <mikeryan@lacklustre.net>  04 Dec 2018 21:50:00 -0800
+
 libbtbb (2018-08-R1) unstable; urgency=low
   * No changes, just keeping version parity with Ubertooth 2018-08-R1
 
