--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+libbtbb (2020-12-R1) unstable; urgency=low
+  * Python 3 support
+  * Minor bugfixes
+
+ -- Mike Ryan <mikeryan@lacklustre.net>  25 Dec 2020 13:30:00 -0800
+
 libbtbb (2018-12-R1) unstable; urgency=low
   * No changes, just keeping version parity with Ubertooth 2018-12-R1
 
